--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Full Screen Animation</title>
+  <title>Clenix is ​​coming</title>
   <style>
     body {
       margin: 0;
@@ -11,6 +11,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      flex-direction: column;
       height: 100vh;
       background: linear-gradient(135deg, #1e3c72, #2a5298);
       color: white;
@@ -34,9 +35,45 @@
         opacity: 0.7;
       }
     }
+
+    .social-icons {
+      position: absolute;
+      bottom: 20px;
+      display: flex;
+      gap: 20px;
+    }
+
+    .social-icons a {
+      text-decoration: none;
+      width: 50px;
+      height: 50px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      transition: transform 0.3s ease;
+    }
+
+    .social-icons a:hover {
+      transform: scale(1.2);
+    }
+
+    .social-icons img {
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+    }
   </style>
 </head>
 <body>
   <div class="text">Something will happen soon</div>
+  
+  <div class="social-icons">
+    <a href="https://x.com/xyichlenix" target="_blank">
+      <img src="https://xyichlenix.lol/x.png" alt="X Icon">
+    </a>
+    <a href="https://t.me/xyichlenix" target="_blank">
+      <img src="https://xyichlenix.lol/telegram.png" alt="Telegram Icon">
+    </a>
+  </div>
 </body>
 </html>
